[package]
name = "serde_xml"
version = "0.9.0"
authors = ["Oliver Schneider <serde-xml98198@oli-obk.de>"]
license-file = "LICENSE"
description = "xml support for rust-serde"
repository = "https://github.com/serde-rs/xml"

[lib]
test = false

[dependencies]
serde = "0.8"
log = "0.3"

[dev-dependencies]
serde_macros = "0.8"
quickcheck = "0.3.1"
glob = "0.2"
